@@ -359,7 +359,6 @@
     id entityName;
     int i = 0;
     ColoredSwitchButtonCell *cell;
-    NSMutableAttributedString *title;
 
     if (entityType == nil) {
         return;
@@ -379,6 +378,7 @@
         [cell setRepresentedObject:entityName];
 #if 0
 #ifndef xxGNUSTEP
+        NSMutableAttributedString *title;
         title = [[[NSMutableAttributedString alloc] initWithString:[entityName description]] autorelease];
 #if defined(__APPLE__)// || defined(GNUSTEP)
         [title replaceCharactersInRange:NSMakeRange(0,0) withString:@"# "];
@@ -488,7 +488,7 @@
     NSMutableSet *filter;
 
     if ([self isHiddenEntityType:entityType]) {
-        NSLog(@"enumerating hidden type %@", entityType);
+        NSWarnLog(@"enumerating hidden type %@", entityType);
         return nil;
     }
 
