@@ -1,3 +1,11 @@
+2005-04-16  Benhur Stein <benhur@inf.ufsm.br>
+	* ContainerFilter/ContainerSelector.m,
+	  EntityTypeFilter/EntityTypeSelector.m, General/HierarchyBrowser.m,
+	  General/MultiEnumerator.m, General/PajeType.m, General/TimeList.m,
+	  Paje/PajeController.m, ReductionFilter/BusyNode.m, 
+	  PajeSimulator/PajeSimul+Events.m: small code reorganization;
+	  changed NSLog's into NSDebugLog's or NSWarnLog's
+
 2005-01-23 (1.3.2) Vincent Danjean <Vincent.Danjean@ens-lyon.org>
 	* New official release 
 
